--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Admiralfeb's Website</title>
+  <title>Admiralfeb</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="src/assets/icons/z_icon.ico">
 </head>
-<body style="margin:0">
+<body>
   <app-root></app-root>
 </body>
 </html>
